--- a/.github/workflows/main_skynetflaskappdev.yml
+++ b/.github/workflows/main_skynetflaskappdev.yml
@@ -75,4 +75,27 @@ jobs:
         with:
           app-name: 'skynetflaskappdev'
           slot-name: 'Production'
+
+
+  # DeployToAPIM:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   environment:
+  #     name: 'Production'
+  #     url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+  #   permissions:
+  #     id-token: write #This is required for requesting the JWT
+
+  #   steps:
+  #     # - name: Auto Approve
+  #     #   uses: hmarr/auto-approve-action@v4.0.0
+  #     #   with: 
+    
+  #     - name: Download artifact from build job
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: python-app
+
+  #     - name: Unzip artifact for deployment
+  #       run: unzip release.zip
           
